--- a/style.css
+++ b/style.css
@@ -10,17 +10,10 @@ body {
   overflow-x: hidden;
 }
 
-body {
- /* background-image: url('https://i.imgur.com/x9bXvXV.png'); /* زخرفة شفافة جميلة */
-  background-size: 300px;
-  background-repeat: repeat;
-  animation: moveBackground 60s linear infinite;
-}
-
-@keyframes moveBackground {
+ /* @keyframes moveBackground {
   0% { background-position: 0 0; }
   100% { background-position: 1000px 1000px; }
-}
+} */
 
 header {
   background-color: #27ae60;
